feat(tmux): added indicator for leadmap

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,4 @@
+
 # ==============================================================================
 # Globals
 # ==============================================================================
@@ -45,7 +46,12 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
+# Prefix Highlight Settings
+set -g @prefix_highlight_fg 'black'
+set -g @prefix_highlight_bg 'yellow'
+set -g @prefix_highlight_output_prefix ''
 
 # ==============================================================================
 # Retro WarGames Theme
@@ -67,10 +73,12 @@ set -g window-status-current-format '#[fg=green,bg=colour235,nobold] #I:#W #[fg=
 set -g window-status-style bg=black
 set -g window-status-current-style bg=black
 
-# Left/right content
-set -g status-left-length 30
-set -g status-left '#[fg=black,bg=green,bold]#S#[fg=green,bg=black,nobold]'
-set -g status-right '#[fg=green,bg=black] #(~/tmux/widgets.sh)'
+# Left/right content (with padding)
+set -g status-left-length 50
+set -g status-left '  #{prefix_highlight} #[fg=black,bg=green,bold] #S #[fg=green,bg=black]'
+
+set -g status-right-length 80
+set -g status-right '  #[fg=green,bg=black] #(~/tmux/widgets.sh)  '
 
 # Message/command/copy-mode
 set -g window-style bg=black
