--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -78,7 +78,8 @@ set -g status-left-length 50
 set -g status-left '  #{prefix_highlight} #[fg=black,bg=green,bold] #S #[fg=green,bg=black]'
 
 set -g status-right-length 80
-set -g status-right '  #[fg=green,bg=black] #(~/tmux/widgets.sh)  '
+set -g status-right '#[fg=red,bg=black] #(~/.config/tmux/widgets/battery.sh) #[fg=orange,bg=black] #(~/.config/tmux/widgets/cpu.sh) #[fg=yellow,bg=black] #(~/.config/tmux/widgets/ram.sh) #[fg=blue,bg=black] #(~/.config/tmux/widgets/network.sh)'
+
 
 # Message/command/copy-mode
 set -g window-style bg=black
@@ -86,6 +87,7 @@ set -g window-active-style bg=black
 set -g message-style fg=black,bg=green
 set -g message-command-style fg=black,bg=green
 set -g mode-style fg=black,bg=green
+
 
 # ==============================================================================
 # Misc
